--- a/layout.css
+++ b/layout.css
@@ -20,7 +20,8 @@ button {
 	display: block;
 }
 .main-wrap {
-	max-width: 1368px;
+	width: 800px;
+	max-width: 100%;
 	margin-left: auto;
 	margin-right: auto;
 }
